--- a/starter-code/css/styles.css
+++ b/starter-code/css/styles.css
@@ -3,14 +3,15 @@
 Dark Blue: #0B0D17
 Lavender: #D0D6F9
 White: #FFFFFF
+Dark Grey: #979797
 */
 
 
 
 
 body {
-    background-color: #0B0D17;
-
+    background-color: #0B0D17
+    margin: 0;
 }
 
 /* TYPOGRAPHY */
@@ -87,15 +88,38 @@ h5 {
     color: #FFFFFF;
     letter-spacing: 2.7px;
     display: inline;
+
 }
 
 /* CONTAINERS */
 
 .navigation-container {
+    margin: 5% 0 10% 0;
+
 
 
 }
 
+.navigation-box {
+    float: right;
+    box-shadow: inset -10px 0px 100px 20px rgba(151, 151, 151, 0.5);
+    width: 60%;
+    height: 96x;
+    padding: 20px;
+}
+
+.navigation-sections {
+    float: right;
+    display: inline
+    margin: auto 15% auto 15%;
+    padding: 10px;
+
+}
+
+.body-container {
+    display: block;
+    clear: right;
+}
 
 /* INTERACTIVE ELEMENTS */
 
