Sizing navigation bar

--- a/starter-code/css/index-styles.css
+++ b/starter-code/css/index-styles.css
@@ -3,6 +3,9 @@
    background-position: center;
    background-attachment: fixed;
    background-size: cover;
+   background-color: #0B0D17;
+   margin: 0;
+
 }
 
 
