--- a/starter-code/css/crew-styles.css
+++ b/starter-code/css/crew-styles.css
@@ -1,3 +1,8 @@
+html,body{
+    height:100%;
+    width:100%;
+}
+
 .background {
    background-image: url("../assets/crew/background-crew-desktop.jpg");
    background-position: center;
@@ -5,27 +10,94 @@
    background-size: cover;
    background-color: #0B0D17;
    margin: 0;
-
+   height: auto;
 }
+
+/* TYPOGRAPHY */
+
+h4 {
+    mix-blend-mode: normal;
+    opacity: 0.5;
+    padding-bottom: 5%;
+}
+
+h3 {
+    white-space: nowrap;
+    padding-bottom: 5%;
+}
+
+h5 {
+    padding-bottom: 35%;
+}
+
+
+/* Containers */
 
 
 .left-container {
+    display: block;
     width: 450px;
     float: left;
-    margin-left: 15%;
+    margin: 1% 0 0 10%;
+    height: auto;
 }
 
 .right-container {
-    display: inline;
+    display: block;
     float: right;
-    margin-right: 18%;
-    margin-top: 3%;
+    padding: 0;
+    height: auto;
 }
 
 .body-container {
-    margin-top: 8%;
+    display: block;
+    margin: 0;
 }
 /* INTERACTIVE ELEMENTS */
+.crew-links {
+    position: absolute;
+    top: 750px;
+}
 
+.crew-button {
+    border: none;
+    background-color: white;
+    color-white: white;
+    padding: 7.5px;
+    display: line-block;
+    border-radius: 50%;
+    font-size: 0px;
+    opacity: 0.17;
+    margin-right: 15px;
+    transition: 0.3s;
+}
 
+.crew-button:hover {
+    opacity: 0.5;
+}
+
+.crew-button-active {
+    opacity: 1;
+}
+
+/* GRAPHICS */
+
+.douglas {
+    margin-top: 2%;
+    margin-right: 20%;
+}
+
+.mark {
+    margin-top: 5%;
+    margin-right: 24%;
+}
+
+.victor {
+    margin-top: 4.8%;
+    margin-right: 20%;
+}
+
+.anousheh {
+    margin-top: 7%;
+    margin-right: 20%;
 }
