--- a/starter-code/css/index-styles.css
+++ b/starter-code/css/index-styles.css
@@ -5,6 +5,7 @@
    background-size: cover;
    background-color: #0B0D17;
    margin: 0;
+   height: auto;
 
 }
 
@@ -12,7 +13,7 @@
 .left-container {
     width: 450px;
     float: left;
-    margin-left: 15%;
+    margin-left: 10%;
 }
 
 .right-container {
