--- a/starter-code/css/styles.css
+++ b/starter-code/css/styles.css
@@ -62,6 +62,7 @@ h5 {
     color: #D0D6F9;
     letter-spacing: 4.75px;
     margin: 0;
+    font-weight: normal;
 }
 
 .subheading-1 {
@@ -79,6 +80,12 @@ h5 {
     color: #FFFFFF;
     letter-spacing: 2.35px;
     margin: 0;
+}
+
+.h5-bold {
+    mix-blend-mode: normal;
+    opacity: 0.25;
+    font-weight: bold;
 }
 
 .nav-text {
@@ -102,13 +109,17 @@ h5 {
 
 /* CONTAINERS */
 
+
 .navigation-container {
-    margin: 5% auto;
+    position: relative;
+    margin: 40px auto;
     height: 96px;
     overflow: clip;
 }
 
 .navigation-box {
+    position: absolute;
+    right: 0;
     float: right;
     -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
@@ -119,7 +130,8 @@ h5 {
 }
 
 .navigation-sections {
-    position: relative;
+    position: absolute;
+    left: 8%;
     top: 25%;
     display: block;
     margin: auto;
@@ -131,6 +143,7 @@ h5 {
 .body-container {
     display: block;
     clear: right;
+    margin-bottom: 0;
 }
 
 /* GRAPHICS */
@@ -139,9 +152,9 @@ h5 {
     float:left;
     margin: 0;
     display: inline-block;
-    margin-left: 5%;
-    position: relative;
+    position: absolute;
     top: 50%;
+    left: 5%;
     transform: translate(-50%, -50%);
 
     }
@@ -149,9 +162,9 @@ h5 {
 .navigation-line {
     float:left;
     width: 37%;
-    position: relative;
+    position: absolute;
     top: 50%;
-    left: 3%;
+    left: 10%;
     border-color: #979797;
     margin: 0;
 
