--- a/starter-code/css/destination-styles.css
+++ b/starter-code/css/destination-styles.css
@@ -26,13 +26,13 @@ h5 {
     padding-bottom: 15%;
 }
 
-.nav-text {
+.dest-nav-text {
     padding: 0 0 10px 0;
     margin: 0 43px 0 0;
     color: #D0D6F9;
 }
 
-.nav-text-bold {
+.dest-nav-text-bold {
     font-weight: normal;
     color: #FFFFFF;
 }
